fix: align input text colors (#837)
* fix(toggle): update label color

* chore: test screenshots update

---------

--- a/packages/core/src/components/dropdown/dropdown-filter.scss
+++ b/packages/core/src/components/dropdown/dropdown-filter.scss
@@ -24,6 +24,10 @@
       display: flex;
       width: 100%;
       height: 100%;
+
+      input {
+        color: var(--tds-dropdown-filter-input-color);
+      }
     }
 
     .label-inside-as-placeholder {
